[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/stats_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/images/game-menu-bg.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Candal.fnt" type="Font" id=3]

[node name="stats" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 180, 320 )
texture = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="VBoxCont" type="VBoxContainer" parent="."]

margin/left = 5.0
margin/right = 355.0
margin/bottom = 636.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="max_score" type="Label" parent="VBoxCont"]

margin/right = 350.0
margin/bottom = 60.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Max Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="add" type="Label" parent="VBoxCont"]

margin/top = 64.0
margin/right = 350.0
margin/bottom = 124.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "Addition"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_add" type="Label" parent="VBoxCont"]

margin/top = 128.0
margin/right = 350.0
margin/bottom = 188.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sub" type="Label" parent="VBoxCont"]

margin/top = 192.0
margin/right = 350.0
margin/bottom = 252.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "Subtraction"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_sub" type="Label" parent="VBoxCont"]

margin/top = 256.0
margin/right = 350.0
margin/bottom = 316.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mult" type="Label" parent="VBoxCont"]

margin/top = 320.0
margin/right = 350.0
margin/bottom = 380.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "Multiplication"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_mult" type="Label" parent="VBoxCont"]

margin/top = 384.0
margin/right = 350.0
margin/bottom = 444.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="div" type="Label" parent="VBoxCont"]

margin/top = 448.0
margin/right = 350.0
margin/bottom = 508.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "Division"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_div" type="Label" parent="VBoxCont"]

margin/top = 512.0
margin/right = 350.0
margin/bottom = 572.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0.106079, 0.106079, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back" type="Button" parent="VBoxCont"]

margin/top = 576.0
margin/right = 350.0
margin/bottom = 636.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
text = "Back"
flat = false

[connection signal="pressed" from="VBoxCont/back" to="." method="_on_back_pressed"]


